Bug 362848 - packagekit gets angry about amount of transactions
Summary: packagekit gets angry about amount of transactions
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-09 09:21 UTC by Harald Sitter
Modified: 2016-05-19 11:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-05-09 09:21:03 UTC
If I go to the updates page (with 272 updates), packagekit gets angry with discover and starts shouting

muondiscover(26943)/(default) PackageKitResource::fetchDetails()::<lambda: error fetching details "could not create transaction /4569_deeeaaab: failed to allocate /4569_deeeaaab as uid 1000 already has 501 transactions in progress"

doesn't seem to have any adverse effect other than the spam in terminal. I think there might be need for a bit of rate limiting though as to reduce stdout flooding.

Reproducible: Always
Comment 1 Aleix Pol 2016-05-19 11:27:09 UTC
Git commit b9515062feefb00b993e873cccd9ab34008e4ae7 by Aleix Pol.
Committed on 19/05/2016 at 11:20.
Pushed by apol into branch 'master'.

Request all changelogs in the same API call

Instead of using per-resource API, offer more fine-grained API to the
backend.

M  +1    -4    libdiscover/UpdateModel/UpdateModel.cpp
M  +3    -2    libdiscover/backends/PackageKitBackend/PackageKitResource.h
M  +24   -1    libdiscover/backends/PackageKitBackend/PackageKitUpdater.cpp
M  +5    -1    libdiscover/backends/PackageKitBackend/PackageKitUpdater.h
M  +8    -0    libdiscover/resources/AbstractBackendUpdater.cpp
M  +2    -0    libdiscover/resources/AbstractBackendUpdater.h
M  +7    -0    libdiscover/resources/ResourcesUpdatesModel.cpp
M  +1    -0    libdiscover/resources/ResourcesUpdatesModel.h

http://commits.kde.org/discover/b9515062feefb00b993e873cccd9ab34008e4ae7