Request all changelogs in the same API call

Instead of using per-resource API, offer more fine-grained API to the
backend.

BUG: 362848