libdiscover/backends/PackageKitBackend/PackageKitResource.h
@@ -67,8 +67,6 @@ class PackageKitResource : public AbstractResource
         void addPackageId(PackageKit::Transaction::Info info, const QString &packageId);
         void setDetails(const PackageKit::Details& details);
 
-    private Q_SLOTS:
-        void failedFetchingDetails(PackageKit::Transaction::Error, const QString& msg);
         void updateDetail(const QString &packageID,
                           const QStringList &updates,
                           const QStringList &obsoletes,
@@ -81,6 +79,9 @@ class PackageKitResource : public AbstractResource
                           PackageKit::Transaction::UpdateState state,
                           const QDateTime &issued,
                           const QDateTime &updated);
+
+    private Q_SLOTS:
+        void failedFetchingDetails(PackageKit::Transaction::Error, const QString& msg);
 
     private:
         /** fetches details individually, it's better if done in batch, like for updates */
